=======
CHANGES
=======

3.6.0 (unreleased)
------------------

- Change ``zope.app.security`` dependency to the new ``zope.authentication``
  package, dropping a big number of unused dependencies. 

- Get rid of ``zope.app.testing`` test dependency. Add ``ZODB3`` to
  install dependencies, because we use `Persistent` class.

3.5.1 (2009-03-10)
------------------

- Don't depend on the `hook` extra of zope.component, as we don't need
  it explicitly.

- Import security settings (Allow, Deny, Unset) in the ``interfaces``
  module from the ``zope.securitypolicy.settings``, added in previous
  release instead of old ``zope.app.security.settings``.
  The ``zope.app.security`` will be adapted to import them from
  ``zope.securitypolicy.interfaces``.

- Use `_z_instances` instead of `__instances__` for storing instances
  for ``zope.securitypolicy.settings.PermissionSetting`` singleton
  implementation, because __*__ name pattern is reserved for special
  names in python.

- Add security protections for the `PermissionSetting`. 

- Improve documentation formatting, add it to the package's long
  description.

- Remove unneeded dependencies.

- Remove old zpkg-related files and zcml slugs.

3.5.0 (2009-01-31)
------------------

- Include settings that were previously imported from zope.app.security.

3.4.2 (2009-01-28)
------------------

- Changed mailing list address to zope-dev at zope.org. Fix package
  homepage to the pypi page.

- Fix test in buildout which still depended on zope.app.securitypolicy
  by mistake.

- Remove explicit dependency on zope.app.form from ``setup.py``; nothing
  in the code directly depends on this.
 
3.4.1 (2008-06-02)
------------------

- Fix reference to deprecated security policy from ZCML.

3.4.0 (2007-09-25)
------------------

- Initial documented release