@@ -1,12 +1,7 @@
 [buildout]
 develop = .
-parts = test python
+parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.securitypolicy [test]
-
-[python]
-recipe = zc.recipe.egg
 eggs = zope.securitypolicy
-interpreter = python
